--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,6 @@
 
 body {
   background-color: hsl(185, 41%, 84%);
-  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,13 +24,13 @@ body {
 }
 
 h1 {
-  margin-top: 50px;
+  margin: 50px 0 50px 0;
   letter-spacing: 10px;
   color: hsl(186, 14%, 43%);
 }
 
 .container {
-  height: 85%;
+  height: 700px;
   width: 100%;
   background-color: white;
   border-radius: 30px 30px 0 0;
