--- a/css/style.scss
+++ b/css/style.scss
@@ -35,6 +35,22 @@ h1{
     box-sizing: border-box;
     padding: 20px 20px 0 20px;
 
+    @media screen and (min-width: 645px) {
+        width: 60%;
+        border-radius: 30px 30px 30px 30px;
+    }
+    @media screen and (min-width: 1150px) {
+        height: 450px;
+        width: 65%;
+        border-radius: 30px 30px 30px 30px;
+        flex-direction: row;
+        gap: 50px;
+    }
+
+    .inputs{
+        width: 100%;
+    }
+
     .bill{
         width: 100%;
     }
@@ -140,6 +156,11 @@ h1{
         height: 200px;
         box-sizing: border-box;
         padding: 20px;
+
+        @media screen and (min-width:1150px) {
+            height: 80%;
+        }
+
         div{
             display: grid;
             grid-template-columns: 1fr 1fr;
